# dl-cnn

./: .gitignore  README.md  pyproject.toml
data_prep/: data_exploration.ipynb  data_utils.py  subset_prep.ipynb
model/: cnn.ipynb  efficientnet_v2.ipynb  evaluation&ensemble.ipynb  inception_v3.ipynb  kan_cnn.ipynb  kan_linear.ipynb  loss_comparison.ipynb  mobilenet_v3.ipynb  model_config.py  model_utils.py  prototypical_network.ipynb  subset_cnn.ipynb  vision_transfomer.ipynb
model/efficient_kan/: kan.py
model/kan_convolutional/: KANConv.py  KANLinear.py  convolution.py
results/: 0result-plots.ipynb  all_models_f1_summary.csv  all_models_f1_summary_best_single.csv  augmentation-cnn.csv  cnn-subset-different-augmentations.csv  efficientnet-augment.csv  efficientnet-no-augment.csv  inception-augmentations.csv  inception-no-augment.csv  linear-kan-augment.csv  linear-kan-no-augment.csv  mobilenet-augment.csv  mobilenet-no-augment.csv  model_comparison.ipynb  no-augmentation-cnn.csv  vit-augment.csv
